--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -15,7 +15,7 @@
         
         <!--Obtained and altered from https://getbootstrap.com/docs/4.0/components/navbar/-->
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-            <a class="navbar-brand" href="#">Derek</a>
+            <a class="navbar-brand" href="index.html">DJ</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
