--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
     <body>
         <!--Obtained and altered from https://getbootstrap.com/docs/4.0/components/navbar/-->
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-            <a class="navbar-brand" href="#">Derek</a>
+            <a class="navbar-brand" href="index.html">DJ</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,7 +41,7 @@
               <!--Obtained and altered from https://bootsnipp.com/snippets/XRNAv-->
               <h1>
                 Hi, I'm
-                <a class="typewrite" data-period="2000" data-type='[ "Derek.", "a Tennis Player.", "a Student."]''>
+                <a class="typewrite" data-period="2000" data-type='[ "Derek Jain.", "a Tennis Player.", "a Student."]''>
                   <span class="wrap"></span>
                 </a>
               </h1>
@@ -62,7 +62,7 @@
             <h1>Contact Me!</h1>
             <!--Card related code bbtained and altered from: https://getbootstrap.com/docs/4.0/components/card/#card-decks-->
             <div class="card-deck">
-                <div class="card bg-dark" style="width: 18rem;">
+                <div class="card bg-dark">
                     <div class="card-body">
                       <h5 class="card-title">Email</h5>
                       <p class="card-text">Message me through my two emails!</p>
@@ -72,13 +72,13 @@
                           Emails
                         </button>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#">School: derek.jain@menloschool.org</a>
-                          <a class="dropdown-item" href="#">Personal: derekdjain@gmail.com</a>
+                          <a class="dropdown-item">School: derek.jain@menloschool.org</a>
+                          <a class="dropdown-item">Personal: derekdjain@gmail.com</a>
                         </div>
                       </div>
                     </div>
                   </div>
-                <div class="card bg-dark" style="width: 18rem;">
+                <div class="card bg-dark">
                     <div class="card-body ">
                       <h5 class="card-title">Phone</h5>
                       <p class="card-text">Get ahold of me through direct calling.</p>
@@ -86,7 +86,7 @@
                       <p class="card-text">My Number: 650-206-3903</p>
                     </div>
                   </div>                  
-                  <div class="card bg-dark" style="width: 18rem;">
+                  <div class="card bg-dark">
                     <div class="card-body">
                       <h5 class="card-title">UTR</h5>
                       <p class="card-text">Contact me at the Universal Tennis site:</p>
