--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -127,14 +127,16 @@
             <div class="card bg-dark short">
               <img class="card-img-top" src="photos/wedding.JPG" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">Ever since I was 5, I spent half of my time working on school and my other half playing tennis. It has been over 11 years since that point, and it all started at the Menlo Circus Club. I took a liking to the sport since it felt so fast paced while also being so independent. 
+                <p class="card-text">
+                  Ever since I was 5, I spent half of my time working on school and my other half playing tennis. It has been over 11 years since that point, and it all started at the Menlo Circus Club. I took a liking to the sport since it felt so fast paced while also being so independent. 
                   Talking about my family, my dad immigrated from India at the age of 5 and my mom has always lived in the United States. I've taken part in many of my dad's traditions, usually attending Indian weddings with his family mainly in the east coast.</p>
               </div>
             </div>
             <div class="card bg-dark">
               <img class="card-img-top" src="photos/menlo.png" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text">I also have one dog and two older sisters, one who has graduated form dartmouth and the other is a sophmore at UCLA. 
+                <p class="card-text">
+                  I also have one dog and two older sisters, one who has graduated form dartmouth and the other is a sophmore at UCLA. 
                   I attended Trinity Elemntary school and am now a a junior at Menlo Highschool. As a student, I've gained intrest in many other fields, especilly more in computer science. I have taken all the courses for computer science as I could at Menlo and am now taking AT CS.</p>
               </div>
             </div>
@@ -151,15 +153,13 @@
             <div class="card bg-dark">
               <img class="card-img-top" src="photos/GreenBallWhiteLetter.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
                 <p class="card-text">
-                  I also now volunteer as an aistant coach at an orginazation called 'EPATT' (East Palo Alto Tennis & Tutoring) during the summer and the first semester of each school year.
+                  I also now volunteer as an assitant coach at an orginization called 'EPATT' (East Palo Alto Tennis & Tutoring) during the summer and the first semester of each school year.
                   Ultimately, tennis has been one of the biggest factors in my life and it is a sport that helps me and encourages me to strive for more.
                 </p>
               </div>
             </div>
           </div>
-        <!-- Your Content ABOVE this Line -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
